--- a/style.css
+++ b/style.css
@@ -12,6 +12,13 @@
     background: repeating-radial-gradient( #f3e9e9, #f3f3f3);
 }
 
+.footer {
+    background-color: #22232f;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
 .navbar {
     display: flex;
     justify-content: space-around;
@@ -63,30 +70,31 @@
     font-size: 50px;
 }
 
-.content {
+.center {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.center {
+.content {
     display: flex;
+    /* border: 0.5px solid #555; */
 }
 
-.items_center {
+.items_content {
     width: 600px;
     height: 350px;
 }
 
-.tittle_items_center {
+.tittle_items_content {
     display: flex;
     flex-direction: column;
     margin: 40px 40px;
     justify-content: space-around;
 }
 
-.tic {
+.tic1 {
     margin-bottom: 20px;
     font-size: 40px;
 }
@@ -108,4 +116,85 @@
     border-radius: 5px;
     background-color: #3fae66;
     color: #fff;
+}
+
+.tic5 {
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 60px;
+}
+
+.learn_more {
+    display: flex;
+    width: 50%;
+    margin: 50px;
+}
+
+.lm_to {
+    text-decoration: none;
+    list-style: none;
+    margin: 0 40px;
+}
+
+.select-lang {
+    color: #fff;
+    width: 100px;
+    height: 28px;
+    border: 2px solid #fff;
+    border-radius: 4px;
+    outline: none;
+    background-color: #1a1a22;
+}
+
+.lm_properties {
+    margin: 20px 0;
+    font-size: 20px;
+    font-weight: 400;
+    color: #fff;
+    position: relative;
+}
+
+.lm_email_icon {
+    position: absolute;
+    top: 10px;
+    left: 20px;
+}
+
+.lm_heading {
+    font-size: 30px;
+    font-weight: bold;
+    color: #fff;
+}
+
+.textfield {
+    width: 400px;
+    height: 40px;
+    border-radius: 10px;
+    padding: 0 50px 0 0;
+    font-size: 15px;
+    outline: none;
+    background-color: #1a1a22;
+    border: 2px solid #fff;
+    color: #fff;
+}
+
+.button {
+    position: absolute;
+    width: 100px;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    right: -50px;
+    color: #fff;
+    padding: 0;
+    background-color: #439760;
+}
+
+.other {
+    display: flex;
+    list-style: none;
+}
+
+.other_to {
+    margin: 0 10px;
+    font-size: 15px;
 }
